did some ui and color changes and added a go public' feature

--- a/Raindrops.app/Contents/Info.plist
+++ b/Raindrops.app/Contents/Info.plist
@@ -11,6 +11,9 @@
     <key>CFBundleExecutable</key>
     <string>Raindrops</string>
 
+    <key>CFBundleIconName</key>
+    <string>Raindrops</string>
+
     <key>CFBundleIconFile</key>
     <string>Raindrops.icns</string>
 
